--- a/src/pages/PhoneListPage/PhoneListPage.scss
+++ b/src/pages/PhoneListPage/PhoneListPage.scss
@@ -1,4 +1,4 @@
-﻿@use '../../styles/mixins/index' as *;
+@use '../../styles/mixins/index' as *;
 
 .phone-list-page {
   min-height: calc(100vh - 80px);
@@ -22,7 +22,11 @@
     border-left: 0.5px solid var(--color-black);
 
     > li {
-      display: contents;
+      aspect-ratio: 1;
+      overflow: hidden;
+      border-right: 0.5px solid var(--color-black);
+      border-bottom: 0.5px solid var(--color-black);
+      display: flex;
     }
 
     @include tablet {
@@ -38,4 +42,3 @@
     }
   }
 }
-
